# ScrapRAG

./: .gitignore  README.md  pyproject.toml
scrape_rag/components/: crawler.py
scrape_rag/entity/: artifact.py
scrape_rag/exceptionHandling/: exception.py
scrape_rag/logging/: logger.py
scrape_rag/pipeline/: crawl_pipeline.py
