[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape_rag"
version = "0.0.1"
authors = [
    { name = "Deepak", email = "deepakkhokhar1313@gmail.com" },
]
description = "A tool for scraping and RAG workflows."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["scraping", "RAG", "AI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas",
    "numpy",
    "python-dotenv",
    "crawl4ai",
]

[tool.setuptools]
# Use TOML table syntax for dynamic package discovery
packages = { find = {} }  # <-- Fix here
include-package-data = true
package-dir = { "" = "." }

[project.urls]
Homepage = "https://github.com/deepakkhokhar1313/ScrapRAG"